hub manager fixup